desafio reestructura sv

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 MONGO_URL= mongodb+srv://alejo:Ag123456@cluster0.0xwoncc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=8080
 SESSION_SECRET= sessionsecret
+
+GITHUB_CLIENT_ID=client_id_de_github
+GITHUB_CLIENT_SECRET=client_secret_de_github
+
+GOOGLE_CLIENT_ID=google_client_id
+GOOGLE_CLIENT_SECRET=google_client_secret
