ultima correcion pre entrega

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,18 @@ MONGO_URL= mongodb+srv://alejo:Ag123456@cluster0.0xwoncc.mongodb.net/?retryWrite
 PORT=8080
 SESSION_SECRET= sessionsecret
 
+EMAIL_USER_NODEMAILER=tuEmail@gmail.com
+EMAIL_PASS_NODEMAILER=tuContraseña
+
+TWILIO_ACCOUNT_SID=sid_de_twilio
+TWILIO_AUTH_TOKEN=token_de_twilio
+TWILIO_PHONE_NUMBER=numero_de_twilio
+
 GITHUB_CLIENT_ID=client_id_de_github
 GITHUB_CLIENT_SECRET=client_secret_de_github
 
 GOOGLE_CLIENT_ID=google_client_id
 GOOGLE_CLIENT_SECRET=google_client_secret
+
+ADMIN_EMAIL=correo@deAdmin
+ADMIN_PASSWORD=password_de_admin
