--- a/package.json
+++ b/package.json
@@ -5,25 +5,31 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch src/app.js"
+    "start": "node --watch src/app.js",
+    "vercel-login": "vercel login",
+    "vercel-dev": "vercel"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-flash": "^0.0.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.4.0",
     "mongoose-paginate-v2": "^1.8.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.7.5",
-    "sweetalert2": "^11.11.0"
+    "sweetalert2": "^11.11.0",
+    "twilio": "^5.2.2",
+    "uuid": "^10.0.0"
   }
 }
