--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "sweetalert2": "^11.11.0",
     "twilio": "^5.2.2",
     "uuid": "^10.0.0",
